@@ -1,3 +1,8 @@
+2005-11-20  Ian Lance Taylor  <ian@airs.com>
+
+	PR rtl-optimization/24883
+	* gcc.c-torture/compile/pr24883.c: New test.
+
 2005-11-21  Kazu Hirata  <kazu@codesourcery.com>
 
 	PR middle-end/20583
