@@ -1,3 +1,9 @@
+2005-11-20  Ian Lance Taylor  <ian@airs.com>
+
+	PR rtl-optimization/24883
+	* combine.c (combinable_i3pat): When checking whether the
+	destination of i3 is used in i3, consider paradoxical subregs.
+
 2005-11-21  Kazu Hirata  <kazu@codesourcery.com>
 
 	PR middle-end/20583
